more aspirational conf changes

--- a/sample_data/json/volvox/config.json
+++ b/sample_data/json/volvox/config.json
@@ -156,6 +156,8 @@
          "type" : "FeatureTrack"
       },
       {
+         "datasource": 'microarray_wigtiles'
+
          "style" : {
             "className" : "image"
          },
